nextcloud/nextcloud-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-db-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-db-pod
    spec:
      containers:
      - name: mysql
        image: jsurf/rpi-mariadb:latest
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql
          subPath: db-data
        securityContext:
          runAsUser: 1002
          allowPrivilegeEscalation: false
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: nextcloud-shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    pod-label: nextcloud-db-pod
  ports:
  - protocol: TCP
    port: 3306
