nextcloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/proxy-body-size: 16g
spec:
  rules:
  - host: nextcloud.cgrpi.ml
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-server
            port: 
              number: 80
